# SimpleRT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/configs/: configtest.json  configtest_apple - 副本.json  configtest_apple.json  configtest_apple_cbox.json  configtest_apple_fruit.json  configtest_apple_tex.json  configtest_apple的副本.json  cornellbox.json  santa.json
assets/image/: result - 副本.exr  result.exr  result_1000_spp.exr  result_128_haltonsamplelight.exr  result_1440_mirror_glass.exr  result_2048.exr  result_2048_haltonsamplelight.exr  result_8spp_box.exr  result_8spp_gaussian.exr  result_apple.exr  result_apple_16.exr  result_apple_512.exr  result_apple_64_halton.exr  result_apple_64_uniform.exr  result_apple_better_tex.exr  result_apple_fruit_32.exr  result_apple_glass_128.exr  result_apple_glass_64.exr  result_apple_handle_specualr.exr  result_apple_inside_sphere_world_normal.exr  result_apple_mirror_box.exr  result_apple_uni.exr  result_apple_uv.exr  result_apple_weak_transimisson.exr  result_fixed.exr  result_gaussian.exr  result_gaussian_256.exr  result_glass_2048.exr  result_halton.exr  result_halton_viewer.exr  result_santa_gn.exr  result_santa_sn.exr  result_uv_sucks.exr  santa_0.9_mirror.exr  test.ppm
assets/models/: Common_Bench_A.FBX  box.fbx
assets/models/cbox/: cbox-atwill.exr  cbox-atwill.xml  cbox-distributed.exr  cbox-distributed.xml  cbox-whitted.exr  cbox-whitted.xml
assets/scenes/: testtex.exr
image/: IrfanViewPortable.exe.lnk  test.ppm
src/: main.cpp
src/accelerate/: bvh.cpp  bvh.h  linear.cpp  linear.h
src/asset/: model.cpp  model.h  stb_image.cpp
src/base/: accelerate.cpp  accelerate.h  bxdf.cpp  bxdf.h  camera.cpp  camera.h  datatoimage.cpp  datatoimage.h  film.cpp  film.h  filter.cpp  filter.h  geometrys.cpp  geometrys.h  header.h  light.cpp  light.h  material.cpp  material.h  ray.cpp  ray.h  raytracer.cpp  raytracer.h  reflection.cpp  reflection.h  renderer.cpp  renderer.h  sampler.cpp  sampler.h  sampling.cpp  sampling.h  shape.cpp  shape.h  texture.cpp  texture.h
src/bxdf/: glass.cpp  glass.h  lambert.cpp  lambert.h
src/filters/: box.cpp  box.h  gaussian.cpp  gaussian.h
src/geometry/: boundingbox.cpp  boundingbox.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/lights/: diffuse.cpp  diffuse.h
src/materials/: glass.cpp  glass.h  matte.cpp  matte.h  mirror.cpp  mirror.h
src/raytracer/: businesscard.cpp  businesscard.h  path.cpp  path.h  whitecolor.cpp  whitecolor.h
src/samplers/: halton.cpp  halton.h  lowdiscrepancy.cpp  lowdiscrepancy.h
src/struct/: common.cpp  common.h  intersectpoint.cpp  intersectpoint.h  threadargs.cpp  threadargs.h  vertex.cpp  vertex.h
src/tool/: exrhelper.cpp  exrhelper.h  imagehelper.cpp  imagehelper.h  jsonhelper.cpp  jsonhelper.h  math.cpp  math.h  platform.cpp  platform.h  timer.cpp  timer.h
tool/IrfanViewPortable/App/AppInfo/: appinfo.ini
tool/IrfanViewPortable/App/AppInfo/Launcher/: Custom.nsh  IrfanViewPortable.ini
tool/IrfanViewPortable/App/DefaultData/IrfanView/: i_view32.ini
tool/IrfanViewPortable/App/IrfanView/: Liesmich.txt  i_about.txt  i_changes.txt  i_options.txt  i_plugins.txt  i_view32.chm  i_view32.ini
tool/IrfanViewPortable/App/IrfanView/Help/: i_view32_Chinese_TW.chm  i_view32_Portugues-Brasil.chm  i_view32_deutsch.chm  i_view32_russian.chm
tool/IrfanViewPortable/App/IrfanView/Languages/: IP_Chinese_TW.lng  IP_Polski.lng  IP_Portugues-Brasil.lng  IP_Spanish.lng  Readme.txt
tool/IrfanViewPortable/Data/: PortableApps.comLauncherRuntimeData-IrfanViewPortable.ini
tool/IrfanViewPortable/Data/IrfanView/: i_view32.ini
tool/IrfanViewPortable/Data/settings/: IrfanViewPortableSettings.ini
